log
Fri 21 Apr 2023 06:45:33 PM UTC: 
 tests:  1|8
total_score: 0/70
5180414
Fri 21 Apr 2023 07:04:55 PM UTC: 
 treemap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
9203d5e
Fri 21 Apr 2023 07:26:13 PM UTC: 
 treemap.c | 22 ++++++++++++++++++++--
 1 file changed, 20 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:51:23: error: initialization of ‘TreeNode *’ from incompatible pointer type ‘Pair *’ [-Werror=incompatible-pointer-types]
   51 |   TreeNode *nodoAux = searchTreeMap(tree,key);
      |                       ^~~~~~~~~~~~~
treemap.c:53:1: error: expected expression before ‘}’ token
   53 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
e645b8e
Fri 21 Apr 2023 07:26:33 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
72e5b2e
Fri 21 Apr 2023 07:28:34 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  6|6
total_score: 5/70
a2e61a9
Fri 21 Apr 2023 07:41:21 PM UTC: 
 treemap.c | 12 ++----------
 1 file changed, 2 insertions(+), 10 deletions(-)
 tests:  7|6
total_score: 5/70
8e5366b
Sat 22 Apr 2023 02:35:30 AM UTC: 
 treemap.c | 17 ++++++++++++++---
 1 file changed, 14 insertions(+), 3 deletions(-)
 tests:  13|5
total_score: 15/70
8ad0aee
Sat 22 Apr 2023 03:35:39 AM UTC: 
 treemap.c | 42 ++++++++++++++++++++++++++++++++++++++++--
 1 file changed, 40 insertions(+), 2 deletions(-)
 tests:  0|0
7f3d356
Sat 22 Apr 2023 03:37:48 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  15|4
total_score: 25/70
40c22b5
Sat 22 Apr 2023 03:47:15 AM UTC: 
 treemap.c | 17 ++++++++++++++---
 1 file changed, 14 insertions(+), 3 deletions(-)
 tests:  17|4
total_score: 30/70
2933021
Sat 22 Apr 2023 03:51:52 AM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘firstTreeMap’:
treemap.c:149:28: error: ‘TreeNode’ has no member named ‘current’
  149 |   auxTree = minimum(auxTree->current);
      |                            ^~
treemap.c:150:26: error: ‘TreeNode’ has no member named ‘current’
  150 |   tree->current = auxTree->current;
      |                          ^~
Compilation failed
02eb42c
Sat 22 Apr 2023 03:52:20 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘firstTreeMap’:
treemap.c:149:28: error: ‘TreeNode’ has no member named ‘current’
  149 |   auxTree = minimum(auxTree->current);
      |                            ^~
treemap.c:150:26: error: ‘TreeNode’ has no member named ‘current’
  150 |   tree->current = auxTree->current;
      |                          ^~
Compilation failed
75517d4
Sat 22 Apr 2023 03:53:05 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘firstTreeMap’:
treemap.c:150:26: error: ‘TreeNode’ has no member named ‘current’
  150 |   tree->current = auxTree->current;
      |                          ^~
Compilation failed
e0e0049
Sat 22 Apr 2023 03:53:16 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  19|3
total_score: 35/70
ee0f3c1
Sat 22 Apr 2023 05:34:34 AM UTC: 
 treemap.c | 19 +++++++++++++++++--
 1 file changed, 17 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘upperBound’:
treemap.c:148:20: error: ‘TreeNode’ has no member named ‘key’
  148 |       if(tree->root->key > key)
      |                    ^~
treemap.c:158:10: error: returning ‘TreeNode *’ from a function with incompatible return type ‘Pair *’ [-Werror=incompatible-pointer-types]
  158 |   return nodoChico;
      |          ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
f3b698d
Sat 22 Apr 2023 05:34:49 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘upperBound’:
treemap.c:148:20: error: ‘TreeNode’ has no member named ‘key’
  148 |       if(tree->root->key > key)
      |                    ^~
Compilation failed
29f773c
Sat 22 Apr 2023 05:35:08 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘upperBound’:
treemap.c:148:21: error: comparison of distinct pointer types lacks a cast [-Werror]
  148 |       if(tree->root > key)
      |                     ^
cc1: all warnings being treated as errors
Compilation failed
5170f2c
Sat 22 Apr 2023 05:37:24 AM UTC: 
 treemap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘upperBound’:
treemap.c:158:10: error: ‘nodoChico’ undeclared (first use in this function)
  158 |   return nodoChico->pair->key;
      |          ^~~~~~~~~
treemap.c:158:10: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:159:1: error: control reaches end of non-void function [-Werror=return-type]
  159 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
6713f25
Sat 22 Apr 2023 05:37:38 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  19|3
total_score: 35/70
a279b98
Sat 22 Apr 2023 05:39:54 AM UTC: 
 treemap.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘upperBound’:
treemap.c:150:25: error: ‘TreeNode’ has no member named ‘root’
  150 |         result = auxTree->root;
      |                         ^~
treemap.c:151:16: error: ‘TreeNode’ has no member named ‘root’
  151 |         auxTree->root = auxTree->root->left;
      |                ^~
treemap.c:151:32: error: ‘TreeNode’ has no member named ‘root’
  151 |         auxTree->root = auxTree->root->left;
      |                                ^~
treemap.c:155:16: error: ‘TreeNode’ has no member named ‘root’
  155 |         auxTree->root = auxTree->root->right;
      |                ^~
treemap.c:155:32: error: ‘TreeNode’ has no member named ‘root’
  155 |         auxTree->root = auxTree->root->right;
      |                                ^~
treemap.c:158:10: error: returning ‘TreeNode *’ from a function with incompatible return type ‘Pair *’ [-Werror=incompatible-pointer-types]
  158 |   return result;
      |          ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
7430c8c
Sat 22 Apr 2023 05:40:11 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘upperBound’:
treemap.c:146:16: error: ‘TreeNode’ has no member named ‘root’
  146 |   while(auxTree->root != NULL)
      |                ^~
treemap.c:150:25: error: ‘TreeNode’ has no member named ‘root’
  150 |         result = auxTree->root;
      |                         ^~
treemap.c:151:16: error: ‘TreeNode’ has no member named ‘root’
  151 |         auxTree->root = auxTree->root->left;
      |                ^~
treemap.c:151:32: error: ‘TreeNode’ has no member named ‘root’
  151 |         auxTree->root = auxTree->root->left;
      |                                ^~
treemap.c:155:16: error: ‘TreeNode’ has no member named ‘root’
  155 |         auxTree->root = auxTree->root->right;
      |                ^~
treemap.c:155:32: error: ‘TreeNode’ has no member named ‘root’
  155 |         auxTree->root = auxTree->root->right;
      |                                ^~
treemap.c:158:10: error: returning ‘TreeNode *’ from a function with incompatible return type ‘Pair *’ [-Werror=incompatible-pointer-types]
  158 |   return result;
      |          ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
69970ad
Sat 22 Apr 2023 05:40:41 AM UTC: 
 treemap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘upperBound’:
treemap.c:158:10: error: returning ‘TreeNode *’ from a function with incompatible return type ‘Pair *’ [-Werror=incompatible-pointer-types]
  158 |   return result;
      |          ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
80c7ff7
